[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
compliance.workspace = true
conxian-core.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
