[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
conxian-core.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
minreq = "2.14.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
